# kanimtool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/kanimtool/: __main__.py  builder.py  cli.py  inspect.py  io.py  parser.py
